--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/sistemaDiretor
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://localhost:54323/sistemaDiretor
+
 spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 server.error.include-message=always
+server.port=8081
