--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:postgresql://localhost:54323/sistemaDiretor
-
+spring.datasource.username=postgres
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=create
