--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,23 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/sistemaDiretor
-spring.datasource.username=postgres
-spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/sistemaDiretor
+spring.datasource.username=root
+spring.datasource.password=letmein
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 
-server.error.include-message=always
-server.port=8081
+#spring.datasource.url=jdbc:postgresql://localhost:5432/sistemaDiretor
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.properties.hibernate.format_sql=true
+#
+#server.error.include-message=always
+#server.port=8080
+
+
+
+
+
+
